@@ -1,4 +1,4 @@
-// Copyright 2005, 2006, 2007 Global Virtual Airlines Group. All Rights Reserved.
+// Copyright 2005, 2006, 2007, 2008 Global Virtual Airlines Group. All Rights Reserved.
 package org.deltava.commands.main;
 
 import java.util.*;
@@ -15,7 +15,7 @@ import org.deltava.util.*;
 /**
  * A Web Site Command to list logged in users.
  * @author Luke
- * @version 1.0
+ * @version 2.2
  * @since 1.0
  */
 
@@ -34,11 +34,11 @@ public class UserListCommand extends AbstractCommand {
     		sortOpt = PilotComparator.TYPES[PilotComparator.PILOTCODE];
     	
     	// Initialize the comparator
-    	List<Pilot> users = new ArrayList<Pilot>(UserPool.getPilots());
-    	Collections.sort(users, new PilotComparator(sortOpt));
+    	Map<Pilot, String> users = new TreeMap<Pilot, String>(new PilotComparator(sortOpt));
+    	users.putAll(UserPool.getPilots());
     	
     	// Get maximum concurrent user data
-    	ctx.setAttribute("maxUsers", new Integer(UserPool.getMaxSize()), REQUEST);
+    	ctx.setAttribute("maxUsers", Integer.valueOf(UserPool.getMaxSize()), REQUEST);
     	ctx.setAttribute("maxUserDate", UserPool.getMaxSizeDate(), REQUEST);
 
         // Get and save the users in the request
